--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
       <label><input type="radio" name="area" value="4-6"/>4-6 m²</label><br/>
       <label><input type="radio" name="area" value="6-8"/>6-8 m²</label><br/>
       <label><input type="radio" name="area" value="8+"/>8+ m²</label>
+      <p data-i18n="bathroomsQuestion">Ilość łazienek?</p>
+      <input type="number" id="bathrooms" min="1" value="1"/>
     </div>
     <div class="step" data-step="2">
       <p data-i18n="scopeQuestion">Zakres prac?</p>
@@ -52,11 +54,11 @@
     </div>
     <div class="step" data-step="4">
       <p data-i18n="plumbingQuestion">Dodatki hydrauliczne?</p>
-      <label><input type="checkbox" id="wall_hung_wc"/>WC podwieszane</label><br/>
-      <label><input type="checkbox" id="shower_or_bath"/>Prysznic lub wanna</label><br/>
-      <label><input type="checkbox" id="vanity_sink"/>Szafka z umywalką</label><br/>
-      <label><input type="checkbox" id="rain_shower"/>Deszczownica</label><br/>
-      <label><input type="checkbox" id="floor_heating"/>Ogrzewanie podłogowe</label>
+      <label>WC podwieszane <input type="number" id="wall_hung_wc" min="0" value="0"/></label><br/>
+      <label>Prysznic lub wanna <input type="number" id="shower_or_bath" min="0" value="0"/></label><br/>
+      <label>Szafka z umywalką <input type="number" id="vanity_sink" min="0" value="0"/></label><br/>
+      <label>Deszczownica <input type="number" id="rain_shower" min="0" value="0"/></label><br/>
+      <label>Ogrzewanie podłogowe <input type="number" id="floor_heating" min="0" value="0"/></label>
     </div>
     <div class="step" data-step="5">
       <label data-i18n="name">Imię</label>
@@ -84,6 +86,7 @@ const translations = {
     start: 'Rozpocznij',
     postalCode: 'Kod pocztowy',
     areaQuestion: 'Powierzchnia łazienki?',
+    bathroomsQuestion: 'Ilość łazienek?',
     scopeQuestion: 'Zakres prac?',
     tileQuestion: 'Typ płytek?',
     plumbingQuestion: 'Dodatki hydrauliczne?',
@@ -101,6 +104,7 @@ const translations = {
     start: 'Start',
     postalCode: 'Postal code',
     areaQuestion: 'Bathroom area?',
+    bathroomsQuestion: 'Number of bathrooms?',
     scopeQuestion: 'Scope of work?',
     tileQuestion: 'Tile type?',
     plumbingQuestion: 'Plumbing extras?',
@@ -118,6 +122,7 @@ const translations = {
     start: 'Почати',
     postalCode: 'Поштовий індекс',
     areaQuestion: 'Площа ванної?',
+    bathroomsQuestion: 'Кількість ванних кімнат?',
     scopeQuestion: 'Обсяг робіт?',
     tileQuestion: 'Тип плитки?',
     plumbingQuestion: 'Додаткова сантехніка?',
@@ -130,7 +135,7 @@ const translations = {
     next: 'Далі'
   }
 };
-const state = { plumbing:{} };
+const state = { plumbing:{}, bathrooms:1 };
 function setLanguage(lang){
   const dict = translations[lang];
   document.querySelectorAll('[data-i18n]').forEach(el=>{
@@ -161,20 +166,20 @@ startBtn.onclick = () => { hero.style.display='none'; form.style.display='block'
 prevBtn.onclick = () => { if(currentStep>0){ currentStep--; showStep(currentStep);} };
 nextBtn.onclick = async () => {
   if(currentStep===0){ state.postal_code = document.getElementById('postal_code').value; }
-  if(currentStep===1){ const a=document.querySelector('input[name="area"]:checked'); if(a) state.area_m2=a.value; }
+  if(currentStep===1){ const a=document.querySelector('input[name="area"]:checked'); if(a) state.area_m2=a.value; state.bathrooms=parseInt(document.getElementById('bathrooms').value)||1; }
   if(currentStep===2){ const s=document.querySelector('input[name="scope"]:checked'); if(s) state.scope=s.value; }
   if(currentStep===3){ const t=document.querySelector('input[name="tile"]:checked'); if(t) state.tile_type=t.value; }
   if(currentStep===4){ state.plumbing={
-    wall_hung_wc: document.getElementById('wall_hung_wc').checked,
-    shower_or_bath: document.getElementById('shower_or_bath').checked,
-    vanity_sink: document.getElementById('vanity_sink').checked,
-    rain_shower: document.getElementById('rain_shower').checked,
-    floor_heating: document.getElementById('floor_heating').checked
+    wall_hung_wc: parseInt(document.getElementById('wall_hung_wc').value)||0,
+    shower_or_bath: parseInt(document.getElementById('shower_or_bath').value)||0,
+    vanity_sink: parseInt(document.getElementById('vanity_sink').value)||0,
+    rain_shower: parseInt(document.getElementById('rain_shower').value)||0,
+    floor_heating: parseInt(document.getElementById('floor_heating').value)||0
   }; }
   if(currentStep===5){
     state.name = document.getElementById('name').value;
     state.phone = document.getElementById('phone').value;
-    const res = await fetch('/api/estimate',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({area_m2:state.area_m2,scope:state.scope,tile_type:state.tile_type,plumbing:state.plumbing,postal_code:state.postal_code})});
+    const res = await fetch('/api/estimate',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({area_m2:state.area_m2,scope:state.scope,tile_type:state.tile_type,plumbing:state.plumbing,bathrooms:state.bathrooms,postal_code:state.postal_code})});
     const data = await res.json();
     state.estimate = { low:data.low, high:data.high, days_min:data.days_min, days_max:data.days_max };
     state.serviceable = data.serviceable;
