feat: add seo meta and sitemap

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,38 @@
   <meta charset="UTF-8" />
   <title>Łazienka pod klucz</title>
   <link rel="icon" href="data:," />
+  <meta name="description" content="Łazienka pod klucz – szybka wycena online" />
+  <meta name="keywords" content="łazienka, remont, wycena, turnkey bathroom" />
+  <meta property="og:title" content="Łazienka pod klucz" />
+  <meta property="og:description" content="Szybka wycena online" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://example.com/" />
+  <meta property="og:image" content="https://example.com/og-image.jpg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Łazienka pod klucz" />
+  <meta name="twitter:description" content="Szybka wycena online" />
+  <meta name="twitter:url" content="https://example.com/" />
+  <meta name="twitter:image" content="https://example.com/og-image.jpg" />
+  <link rel="canonical" href="https://example.com/" />
+  <link rel="alternate" hreflang="pl" href="https://example.com/pl" />
+  <link rel="alternate" hreflang="en" href="https://example.com/en" />
+  <link rel="alternate" hreflang="ua" href="https://example.com/ua" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "LocalBusiness",
+      "name": "Łazienka pod klucz",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "ul. Przykładowa 1",
+        "addressLocality": "Warszawa",
+        "postalCode": "00-001",
+        "addressCountry": "PL"
+      },
+      "telephone": "+48 500 111 222",
+      "openingHours": "Mo-Fr 09:00-18:00"
+    }
+  </script>
   <style>
     body { font-family: sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; }
     #hero { text-align: center; margin-top: 40px; }
