--- a/public/index.html
+++ b/public/index.html
@@ -36,13 +36,7 @@
       "openingHours": "Mo-Fr 09:00-18:00"
     }
   </script>
-  <style>
-    body { font-family: sans-serif; max-width: 600px; margin: 0 auto; padding: 20px; }
-    #hero { text-align: center; margin-top: 40px; }
-    .step { display: none; }
-    #nav { margin-top: 20px; }
-    button { padding: 8px 16px; margin: 4px; }
-  </style>
+  <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
   <div id="lang-selector">
@@ -80,8 +74,8 @@
     </div>
     <div class="step" data-step="3">
       <p data-i18n="tileQuestion">Typ płytek?</p>
-      <label><input type="radio" name="tile" value="<=60x60"/><=60x60</label><br/>
-      <label><input type="radio" name="tile" value=">=60x120"/>>=60x120</label><br/>
+      <label><input type="radio" name="tile" value="<=60x60"/>&lt;=60x60</label><br/>
+      <label><input type="radio" name="tile" value=">=60x120"/>&gt;=60x120</label><br/>
       <label><input type="radio" name="tile" value="mosaic"/>Mozaika</label>
     </div>
     <div class="step" data-step="4">
@@ -110,128 +104,6 @@
     </div>
   </form>
 
-<script>
-const translations = {
-  pl: {
-    heroTitle: 'Łazienka pod klucz',
-    heroSubtitle: 'Szybka wycena online',
-    start: 'Rozpocznij',
-    postalCode: 'Kod pocztowy',
-    areaQuestion: 'Powierzchnia łazienki?',
-    bathroomsQuestion: 'Ilość łazienek?',
-    scopeQuestion: 'Zakres prac?',
-    tileQuestion: 'Typ płytek?',
-    plumbingQuestion: 'Dodatki hydrauliczne?',
-    name: 'Imię',
-    phone: 'Telefon',
-    resultText: 'Szacunkowa wycena:',
-    whatsapp: 'WhatsApp',
-    call: 'Zadzwoń',
-    prev: 'Wstecz',
-    next: 'Dalej'
-  },
-  en: {
-    heroTitle: 'Turnkey bathroom',
-    heroSubtitle: 'Quick online quote',
-    start: 'Start',
-    postalCode: 'Postal code',
-    areaQuestion: 'Bathroom area?',
-    bathroomsQuestion: 'Number of bathrooms?',
-    scopeQuestion: 'Scope of work?',
-    tileQuestion: 'Tile type?',
-    plumbingQuestion: 'Plumbing extras?',
-    name: 'Name',
-    phone: 'Phone',
-    resultText: 'Estimated quote:',
-    whatsapp: 'WhatsApp',
-    call: 'Call',
-    prev: 'Back',
-    next: 'Next'
-  },
-  ua: {
-    heroTitle: 'Ванна кімната під ключ',
-    heroSubtitle: 'Швидкий розрахунок онлайн',
-    start: 'Почати',
-    postalCode: 'Поштовий індекс',
-    areaQuestion: 'Площа ванної?',
-    bathroomsQuestion: 'Кількість ванних кімнат?',
-    scopeQuestion: 'Обсяг робіт?',
-    tileQuestion: 'Тип плитки?',
-    plumbingQuestion: 'Додаткова сантехніка?',
-    name: 'Імʼя',
-    phone: 'Телефон',
-    resultText: 'Приблизна оцінка:',
-    whatsapp: 'WhatsApp',
-    call: 'Дзвінок',
-    prev: 'Назад',
-    next: 'Далі'
-  }
-};
-const state = { plumbing:{}, bathrooms:1 };
-function setLanguage(lang){
-  const dict = translations[lang];
-  document.querySelectorAll('[data-i18n]').forEach(el=>{
-    const key = el.getAttribute('data-i18n');
-    if(dict[key]) el.textContent = dict[key];
-  });
-  state.lang = lang;
-}
-const langSel = document.getElementById('lang');
-langSel.value = (navigator.language || 'pl').substring(0,2);
-if(!translations[langSel.value]) langSel.value = 'pl';
-setLanguage(langSel.value);
-langSel.addEventListener('change', e => setLanguage(e.target.value));
-
-const startBtn = document.getElementById('startBtn');
-const hero = document.getElementById('hero');
-const form = document.getElementById('quiz');
-const steps = Array.from(document.querySelectorAll('.step'));
-const prevBtn = document.getElementById('prevBtn');
-const nextBtn = document.getElementById('nextBtn');
-let currentStep = 0;
-function showStep(i){
-  steps.forEach((s, idx)=> s.style.display = idx===i ? 'block':'none');
-  if(i===0) prevBtn.style.display='none'; else prevBtn.style.display='inline-block';
-  if(i===steps.length-1){ nextBtn.style.display='none'; } else nextBtn.style.display='inline-block';
-}
-startBtn.onclick = () => { hero.style.display='none'; form.style.display='block'; showStep(0); };
-prevBtn.onclick = () => { if(currentStep>0){ currentStep--; showStep(currentStep);} };
-nextBtn.onclick = async () => {
-  if(currentStep===0){ state.postal_code = document.getElementById('postal_code').value; }
-  if(currentStep===1){ const a=document.querySelector('input[name="area"]:checked'); if(a) state.area_m2=a.value; state.bathrooms=parseInt(document.getElementById('bathrooms').value)||1; }
-  if(currentStep===2){ const s=document.querySelector('input[name="scope"]:checked'); if(s) state.scope=s.value; }
-  if(currentStep===3){ const t=document.querySelector('input[name="tile"]:checked'); if(t) state.tile_type=t.value; }
-  if(currentStep===4){ state.plumbing={
-    wall_hung_wc: parseInt(document.getElementById('wall_hung_wc').value)||0,
-    shower_or_bath: parseInt(document.getElementById('shower_or_bath').value)||0,
-    vanity_sink: parseInt(document.getElementById('vanity_sink').value)||0,
-    rain_shower: parseInt(document.getElementById('rain_shower').value)||0,
-    floor_heating: parseInt(document.getElementById('floor_heating').value)||0
-  }; }
-  if(currentStep===5){
-    state.name = document.getElementById('name').value;
-    state.phone = document.getElementById('phone').value;
-    const res = await fetch('/api/estimate',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({area_m2:state.area_m2,scope:state.scope,tile_type:state.tile_type,plumbing:state.plumbing,bathrooms:state.bathrooms,postal_code:state.postal_code})});
-    const data = await res.json();
-    state.estimate = { low:data.low, high:data.high, days_min:data.days_min, days_max:data.days_max };
-    state.serviceable = data.serviceable;
-    state.distance_km = data.distance_km;
-    document.getElementById('result').textContent = `${data.low}-${data.high} PLN, ${data.days_min}-${data.days_max} dni`;
-    fetch('/api/leads',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify(state)});
-    const wa = buildWhatsAppLink({phone:'48500111222',lang:state.lang,payload:{name:state.name,phone:state.phone,estimate:data}});
-    document.getElementById('waLink').href = wa;
-    document.getElementById('callLink').href = 'tel:48500111222';
-  }
-  if(currentStep < steps.length-1){ currentStep++; showStep(currentStep); }
-};
-function buildWhatsAppLink(opts){
-  const t={
-    pl:(p)=>`Dzień dobry! Interesuje mnie łazienka pod klucz. Szacunek: ${p.estimate.low}-${p.estimate.high} PLN, termin: ${p.estimate.days_min}-${p.estimate.days_max} dni. Proszę o kontakt.`,
-    en:(p)=>`Hello! I'm interested in a turnkey bathroom. Estimate: ${p.estimate.low}-${p.estimate.high} PLN, timeline: ${p.estimate.days_min}-${p.estimate.days_max} days. Please contact me.`,
-    ua:(p)=>`Вітаю! Цікавить санвузол під ключ. Оцінка: ${p.estimate.low}-${p.estimate.high} PLN, термін: ${p.estimate.days_min}-${p.estimate.days_max} днів. Прошу зв’язок.`
-  }[opts.lang](opts.payload);
-  return `https://wa.me/${opts.phone}?text=${encodeURIComponent(t)}`;
-}
-</script>
+<script type="module" src="/src/landing.ts"></script>
 </body>
 </html>
