feat: add gsap animations and noscript fallback

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
     <button id="startBtn" data-i18n="start">Rozpocznij</button>
   </section>
 
-  <form id="quiz" style="display:none;">
+  <form id="quiz">
     <div class="step" data-step="0">
       <label for="postal_code" data-i18n="postalCode">Kod pocztowy</label>
       <input id="postal_code" />
