--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,13 @@
       "openingHours": "Mo-Fr 09:00-18:00"
     }
   </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=%VITE_GA4_MEASUREMENT_ID%"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '%VITE_GA4_MEASUREMENT_ID%');
+  </script>
   <link rel="stylesheet" href="/styles.css" />
 </head>
 <body>
